[gd_scene load_steps=10 format=1]

[ext_resource path="res://scripts/scoreboard.gd" type="Script" id=1]
[ext_resource path="res://fonts/sunn - title.fnt" type="BitmapFont" id=2]
[ext_resource path="res://scenes/entry_header.tscn" type="PackedScene" id=3]
[ext_resource path="res://sprites/background.png" type="Texture" id=4]
[ext_resource path="res://scenes/star.scn" type="PackedScene" id=5]
[ext_resource path="res://sprites/mous_sprite_sheet.png" type="Texture" id=6]
[ext_resource path="res://fonts/sunn.fnt" type="BitmapFont" id=7]

[sub_resource type="Animation" id=2]

resource/name = "moon_credit"
length = 6.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 6 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 500.029, 470.244 ), Vector2( 502.547, 739.62 ) ]
}

[sub_resource type="Animation" id=3]

resource/name = "loading"
length = 4.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:transform/rot")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 4 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[node name="Control" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 30.0
margin/bottom = 29.0
script/script = ExtResource( 1 )

[node name="credits_text" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 40.0
margin/right = 1024.0
margin/bottom = 102.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 0.901961, 0.501961, 1 )
text = "Online Score"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = 10

[node name="score_board" type="VBoxContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 410.0
margin/top = 130.0
margin/right = 606.0
margin/bottom = 363.0
alignment = 0

[node name="entry_header" parent="score_board" instance=ExtResource( 3 )]

[node name="background" type="Sprite" parent="."]

editor/display_folded = true
transform/pos = Vector2( 512.018, 301.52 )
transform/scale = Vector2( 1.00505, 0.593032 )
z/z = -3
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="star" parent="background" instance=ExtResource( 5 )]

transform/pos = Vector2( -363.814, 250.489 )
transform/scale = Vector2( 1.97816, 3.35251 )

[node name="star1" parent="background" instance=ExtResource( 5 )]

transform/pos = Vector2( 422.753, -386.787 )
transform/scale = Vector2( 1.97816, 3.35251 )

[node name="star2" parent="background" instance=ExtResource( 5 )]

transform/pos = Vector2( -147.819, -340.282 )
transform/scale = Vector2( 1.97816, 3.35251 )

[node name="star3" parent="background" instance=ExtResource( 5 )]

transform/pos = Vector2( -450.47, -173.519 )
transform/scale = Vector2( 1.97816, 3.35251 )

[node name="star4" parent="background" instance=ExtResource( 5 )]

transform/pos = Vector2( -377.106, -281.656 )
transform/scale = Vector2( 1.97816, 3.35251 )

[node name="star5" parent="background" instance=ExtResource( 5 )]

transform/pos = Vector2( 333.74, 109.472 )
transform/scale = Vector2( 1.97816, 3.35251 )

[node name="star6" parent="background" instance=ExtResource( 5 )]

transform/pos = Vector2( 317.34, 369.723 )
transform/scale = Vector2( 1.97816, 3.35251 )

[node name="star7" parent="background" instance=ExtResource( 5 )]

transform/pos = Vector2( 362.067, 192.854 )
transform/scale = Vector2( 1.97816, 3.35251 )

[node name="star8" parent="background" instance=ExtResource( 5 )]

transform/pos = Vector2( 283.049, 172.64 )
transform/scale = Vector2( 1.97816, 3.35251 )

[node name="star9" parent="background" instance=ExtResource( 5 )]

transform/pos = Vector2( 335.23, 233.281 )
transform/scale = Vector2( 1.97816, 3.35251 )

[node name="star10" parent="background" instance=ExtResource( 5 )]

transform/pos = Vector2( 337.656, -244.839 )
transform/scale = Vector2( 1.97816, 3.35251 )

[node name="star11" parent="background" instance=ExtResource( 5 )]

transform/pos = Vector2( -213.418, 430.364 )
transform/scale = Vector2( 1.97816, 3.35251 )

[node name="star12" parent="background" instance=ExtResource( 5 )]

transform/pos = Vector2( 151.851, -373.129 )
transform/scale = Vector2( 1.97816, 3.35251 )

[node name="star13" parent="background" instance=ExtResource( 5 )]

transform/pos = Vector2( -286.254, -377.599 )
transform/scale = Vector2( 1.97816, 3.35251 )

[node name="star14" parent="background" instance=ExtResource( 5 )]

transform/pos = Vector2( -362.508, -29.4968 )
transform/scale = Vector2( 1.97816, 3.35251 )

[node name="moon_sprite" type="Sprite" parent="."]

transform/pos = Vector2( 500.029, 470.244 )
transform/rot = 245.269
transform/scale = Vector2( 0.517149, 0.517149 )
texture = ExtResource( 6 )
region = true
region_rect = Rect2( 4, 643, 376, 376 )

[node name="moon_credit_animation" type="AnimationPlayer" parent="moon_sprite"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/moon_credit = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="AnimationPlayer" type="AnimationPlayer" parent="moon_sprite"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/loading = SubResource( 3 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "loading"

[node name="Error" type="Label" parent="."]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 265.0
margin/right = 1024.0
margin/bottom = 369.0
custom_fonts/font = ExtResource( 7 )
text = "CONNECTION FAILED!
Check your internet connection and try again."
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1


